syntax = "proto3";

package golem.component.v1;

import public "golem/component/agent.proto";
import public "golem/component/component_id.proto";
import public "golem/common/project_id.proto";
import public "golem/component/v1/component_error.proto";

service AgentTypesService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
  rpc Get (GetRequest) returns (GetResponse);
}

message GetAllRequest {
  golem.common.ProjectId projectId = 1;
}

message GetAllResponse {
  oneof result {
    GetAllSuccessResponse success = 1;
    golem.component.v1.ComponentError error = 2;
  }
}

message GetAllSuccessResponse {
  repeated RegisteredAgentType agent_types = 1;
}

message GetRequest {
  golem.common.ProjectId projectId = 1;
  string agentType = 2;
}

message GetResponse {
  oneof result {
    RegisteredAgentType success = 1;
    golem.component.v1.ComponentError error = 2;
  }
}

message RegisteredAgentType {
  golem.component.AgentType agentType = 1;
  golem.component.ComponentId implementedBy = 2;
}